--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -5,3 +5,15 @@ prefix: VoidBarrier
 main: com.califralia.voidbarrier.Main
 version: 1.0
 api-version: 1.16
+commands:
+  voidbarrier:
+    description: Parent command for barrier management.
+    permission: voidbarrier.barrier.toggle
+    usage: /<command> [enable/disable]
+permissions:
+  voidbarrier.override:
+    description: Allows the player to override the void protection.
+    default: op
+  voidbarrier.barrier.toggle:
+    description: Allows the player to toggle the barrier.
+    default: op
