--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -3,8 +3,9 @@ description: Prevents players and mobs from walking into void tiles.
 author: Rodro
 prefix: VoidBarrier
 main: com.califralia.voidbarrier.Main
-version: 1.0
+version: 1.1
 api-version: 1.16
+load: STARTUP
 commands:
   voidbarrier:
     description: Parent command for barrier management.
