--- a/src/config.yml
+++ b/src/config.yml
@@ -19,6 +19,7 @@ prefix: "§8[§bServer§8] "
 # Use Entity types from: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/entity/EntityType.html
 whitelisted:
   - PLAYER #It is highly recommended to keep this one since player movement is handled separately.
+  - FALLING_BLOCK
   - EXPERIENCE_ORB
   - BOAT
   - MINECART
